# ClothesOutsideDrum

./: CMakeLists.txt  align.cpp  alignProcessing.cpp  alignTarget.cpp  alignTarget.h  bin.cpp  binsegmentation.cpp  entropy.cpp  entropy.h  entropyOut.cpp  entropyOut.h  findTarget.cpp  model.cpp  pointpose.cpp  pointpose.h  pointposeOut.cpp  washing_machine.cpp
